# scientific-tangle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/app/: main.py  worker.py
backend/src/app/cli/: seed_admin.py
backend/src/app/domain/: clock.py
backend/src/app/domain/entities/: base.py  document.py  user.py
backend/src/app/domain/events/: base.py  document.py
backend/src/app/domain/exceptions/: auth.py  base.py  document.py  query.py  user.py
backend/src/app/domain/interfaces/: embedding_generator.py  graph_search.py  job_queue.py  object_storage.py  password_hasher.py  query_parser.py  reranker.py  synthesis_engine.py  token_service.py  vector_search.py
backend/src/app/domain/values/: password.py  username.py
backend/src/app/features/auth/: schemas.py
backend/src/app/features/document/: schemas.py
backend/src/app/features/graph/: controller.py  provider.py  repository.py  schemas.py
backend/src/app/features/registry/: providers.py  routers.py  subscriptions.py  tasks.py
backend/src/app/features/users/: schemas.py
backend/src/app/infrastructure/: logging.py
backend/src/app/infrastructure/arq/: constants.py  job_queue.py
backend/src/app/infrastructure/config/: settings.py
backend/src/app/infrastructure/database/: after_commit.py  base.py  bootstrap.py  engine.py  mappers.py  mapping.py
backend/tests/features/document/: test_document_flow.py
backend/tests/features/query/: test_ask.py
(+331 files in other folders)
