[project]
name = "scientific-tangle-backend"
version = "0.1.0"
description = "Scientific Tangle backend: FastAPI GraphRAG service"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "neo4j>=5.22",
    "qdrant-client>=1.10",
    "minio>=7.2",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "structlog>=24.1",
    "dishka>=1.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "watchfiles>=0.22",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
